@@ -1,5 +1,5 @@
 /*
- * winrc/win_svc.c - windows services API implementation for unbound
+ * winrc/win_svc.c - windows services API implementation for dnssec-trigger
  *
  * Copyright (c) 2009, NLnet Labs. All rights reserved.
  *
@@ -46,12 +46,13 @@
 #include "config.h"
 #include "winrc/win_svc.h"
 #include "winrc/w_inst.h"
-#include "daemon/daemon.h"
-#include "daemon/worker.h"
-#include "daemon/remote.h"
-#include "util/config_file.h"
-#include "util/netevent.h"
-#include "util/winsock_event.h"
+#include "winrc/netlist.h"
+#include "riggerd/log.h"
+#include "riggerd/cfg.h"
+#include "riggerd/svr.h"
+#include "riggerd/reshook.h"
+#include "riggerd/netevent.h"
+#include "riggerd/winsock_event.h"
 
 /** global service status */
 static SERVICE_STATUS	service_status;
@@ -70,7 +71,7 @@ static int service_cmdline_verbose = 0;
 /** the cron callback */
 static struct comm_timer* service_cron = NULL;
 /** the cron thread */
-static ub_thread_t cron_thread = NULL;
+static HANDLE cron_thread = NULL;
 /** if cron has already done its quick check */
 static int cron_was_quick = 0;
 
@@ -154,7 +155,7 @@ reportev(const char* str)
  * @return malloced string with the result or NULL if it did not
  * exist on an error (logged) was encountered.
  */
-static char*
+char*
 lookup_reg_str(const char* key, const char* name)
 {
 	HKEY hk = NULL;
@@ -231,66 +232,6 @@ lookup_reg_int(const char* key, const char* name)
 	return result;
 }
 
-/** wait for unbound-anchor process to finish */
-static void
-waitforubanchor(PROCESS_INFORMATION* pinfo)
-{
-	/* we have 5 seconds scheduled for it, usually it will be very fast,
-	 * with only a UDP message or two (100 msec or so), but the https
-	 * connections could take some time */
-	DWORD count = 7900;
-	DWORD ret = WAIT_TIMEOUT;
-	/* decrease timer every 1/10 second, we are still starting up */
-	while(ret == WAIT_TIMEOUT) {
-		ret = WaitForSingleObject(pinfo->hProcess, 100);
-		if(count > 4000) count -= 100;
-		else count--; /* go slow, it is taking long */
-		if(count > 3000)
-			report_status(SERVICE_START_PENDING, NO_ERROR, count);
-	}
-	verbose(VERB_ALGO, "unbound-anchor done");
-	if(ret != WAIT_OBJECT_0) {
-		return; /* did not end successfully */
-	}
-	if(!GetExitCodeProcess(pinfo->hProcess, &ret)) {
-		log_err("GetExitCodeProcess failed");
-		return;
-	}
-	verbose(VERB_ALGO, "unbound-anchor exit code is %d", (int)ret);
-	if(ret != 0) {
-		log_info("The root trust anchor has been updated.");
-	}
-}
-
-
-/**
- * Perform root anchor update if so configured, by calling that process
- */
-static void
-call_root_update(void)
-{
-	char* rootanchor;
- 	rootanchor = lookup_reg_str("Software\\Unbound", "RootAnchor");
-	if(rootanchor && strlen(rootanchor)>0) {
-		STARTUPINFO sinfo;
-		PROCESS_INFORMATION pinfo;
-		memset(&pinfo, 0, sizeof(pinfo));
-		memset(&sinfo, 0, sizeof(sinfo));
-		sinfo.cb = sizeof(sinfo);
-		verbose(VERB_ALGO, "rootanchor: %s", rootanchor);
-		report_status(SERVICE_START_PENDING, NO_ERROR, 8000);
-		if(!CreateProcess(NULL, rootanchor, NULL, NULL, 0, 
-			CREATE_NO_WINDOW, NULL, NULL, &sinfo, &pinfo))
-			log_err("CreateProcess error for unbound-anchor.exe");
-		else {
-			waitforubanchor(&pinfo);
-			CloseHandle(pinfo.hProcess);
-			CloseHandle(pinfo.hThread);
-		}
-	}
-	free(rootanchor);
-}
-
 /**
  * Init service. Keeps calling status pending to tell service control
  * manager that this process is not hanging.
@@ -300,71 +241,38 @@ call_root_update(void)
  * @return false if failed.
  */
 static int
-service_init(int r, struct daemon** d, struct config_file** c)
+service_init(struct svr** d, struct cfg** c)
 {
-	struct config_file* cfg = NULL;
-	struct daemon* daemon = NULL;
+	struct cfg* cfg = NULL;
+	struct svr* svr = NULL;
 
 	if(!service_cfgfile) {
-		char* newf = lookup_reg_str("Software\\Unbound", "ConfigFile");
+		char* newf = lookup_reg_str("Software\\DnssecTrigger", "ConfigFile");
 		if(newf) service_cfgfile = newf;
 		else 	service_cfgfile = strdup(CONFIGFILE);
 		if(!service_cfgfile) fatal_exit("out of memory");
 	}
 
-	/* create daemon */
-	if(r) 	daemon = *d;
-	else 	daemon = daemon_init();
-	if(!daemon) return 0;
-	if(!r) report_status(SERVICE_START_PENDING, NO_ERROR, 2800);
-
-	/* read config */
-	cfg = config_create();
+	/* create config */
+	cfg = cfg_create(service_cfgfile);
 	if(!cfg) return 0;
-	if(!config_read(cfg, service_cfgfile, daemon->chroot)) {
-		if(errno != ENOENT) {
-			log_err("error in config file");
-			return 0;
-		}
-		log_warn("could not open config file, using defaults");
-	}
-	if(!r) report_status(SERVICE_START_PENDING, NO_ERROR, 2600);
+	report_status(SERVICE_START_PENDING, NO_ERROR, 2800);
+
+	/* create daemon */
+	svr = svr_create(cfg);
+	if(!svr) return 0;
+	report_status(SERVICE_START_PENDING, NO_ERROR, 2600);
 
 	verbose(VERB_QUERY, "winservice - apply settings");
 	/* apply settings and init */
 	verbosity = cfg->verbosity + service_cmdline_verbose;
-	if(cfg->directory && cfg->directory[0]) {
-		if(chdir(cfg->directory)) {
-			log_err("could not chdir to %s: %s", 
-				cfg->directory, strerror(errno));
-			if(errno != ENOENT)
-				return 0;
-			log_warn("could not change directory - continuing");
-		} else
-			verbose(VERB_QUERY, "chdir to %s", cfg->directory);
-	}
-	log_init(cfg->logfile, cfg->use_syslog, cfg->chrootdir);
-	if(!r) report_status(SERVICE_START_PENDING, NO_ERROR, 2400);
-	verbose(VERB_QUERY, "winservice - apply cfg");
-	daemon_apply_cfg(daemon, cfg);
+	log_init(cfg->logfile, cfg->use_syslog, cfg->chroot);
+	report_status(SERVICE_START_PENDING, NO_ERROR, 2400);
 
-	if(!r) report_status(SERVICE_START_PENDING, NO_ERROR, 2300);
-	if(!(daemon->rc = daemon_remote_create(cfg))) {
-		log_err("could not set up remote-control");
-		daemon_delete(daemon);
-		config_delete(cfg);
-		return 0;
-	}
+	hook_resolv_localhost(cfg);
+	report_status(SERVICE_START_PENDING, NO_ERROR, 2300);
 
-	/* open ports */
-	/* keep reporting that we are busy starting */
-	if(!r) report_status(SERVICE_START_PENDING, NO_ERROR, 2200);
-	verbose(VERB_QUERY, "winservice - open ports");
-	if(!daemon_open_shared_ports(daemon)) return 0;
-	verbose(VERB_QUERY, "winservice - ports opened");
-	if(!r) report_status(SERVICE_START_PENDING, NO_ERROR, 2000);
-
-	*d = daemon;
+	*d = svr;
 	*c = cfg;
 	return 1;
 }
@@ -373,16 +281,15 @@ service_init(int r, struct daemon** d, struct config_file** c)
  * Deinit the service
  */
 static void
-service_deinit(struct daemon* daemon, struct config_file* cfg)
+service_deinit(struct svr* svr, struct cfg* cfg)
 {
-	daemon_cleanup(daemon);
-	config_delete(cfg);
-	daemon_delete(daemon);
+	svr_delete(svr);
+	cfg_delete(cfg);
 }
 
 /**
  * The main function for the service.
- * Called by the services API when starting unbound on windows in background.
+ * Called by the services API when starting on windows in background.
  * Arguments could have been present in the string 'path'.
  * @param argc: nr args
  * @param argv: arg text.
@@ -390,8 +297,8 @@ service_deinit(struct daemon* daemon, struct config_file* cfg)
 static void 
 service_main(DWORD ATTR_UNUSED(argc), LPTSTR* ATTR_UNUSED(argv))
 {
-	struct config_file* cfg = NULL;
-	struct daemon* daemon = NULL;
+	struct cfg* cfg = NULL;
+	struct svr* svr = NULL;
 
 	service_status_handle = RegisterServiceCtrlHandler(SERVICE_NAME, 
 		(LPHANDLER_FUNCTION)hdlr);
@@ -403,19 +310,15 @@ service_main(DWORD ATTR_UNUSED(argc), LPTSTR* ATTR_UNUSED(argv))
 	service_status.dwServiceType = SERVICE_WIN32_OWN_PROCESS;
 	service_status.dwServiceSpecificExitCode = 0;
 
-	/* see if we have root anchor update enabled */
-	call_root_update();
-
 	/* we are now starting up */
 	report_status(SERVICE_START_PENDING, NO_ERROR, 3000);
-	if(!service_init(0, &daemon, &cfg)) {
+	if(!service_init(&svr, &cfg)) {
 		reportev("Could not service_init");
 		report_status(SERVICE_STOPPED, NO_ERROR, 0);
 		return;
 	}
 
-	/* event that gets signalled when we want to quit; it
-	 * should get registered in the worker-0 waiting loop. */
+	/* event that gets signalled when we want to quit */
 	service_stop_event = WSACreateEvent();
 	if(service_stop_event == WSA_INVALID_EVENT) {
 		log_err("WSACreateEvent: %s", wsa_strerror(WSAGetLastError()));
@@ -426,29 +329,24 @@ service_main(DWORD ATTR_UNUSED(argc), LPTSTR* ATTR_UNUSED(argv))
 	if(!WSAResetEvent(service_stop_event)) {
 		log_err("WSAResetEvent: %s", wsa_strerror(WSAGetLastError()));
 	}
+	wsvc_setup_worker(svr->base);
 
 	/* SetServiceStatus SERVICE_RUNNING;*/
 	report_status(SERVICE_RUNNING, NO_ERROR, 0);
 	verbose(VERB_QUERY, "winservice - init complete");
+	
+	/* register DHCP hook and perform first sweep */
+	netlist_start(svr);
 
 	/* daemon performs work */
-	while(!service_stop_shutdown) {
-		daemon_fork(daemon);
-		if(!service_stop_shutdown) {
-			daemon_cleanup(daemon);
-			config_delete(cfg); cfg=NULL;
-			if(!service_init(1, &daemon, &cfg)) {
-				reportev("Could not service_init");
-				report_status(SERVICE_STOPPED, NO_ERROR, 0);
-				return;
-			}
-		}
-	}
+	svr_service(svr);
 
 	/* exit */
 	verbose(VERB_ALGO, "winservice - cleanup.");
 	report_status(SERVICE_STOP_PENDING, NO_ERROR, 0);
-	service_deinit(daemon, cfg);
+	netlist_stop();
+	wsvc_desetup_worker();
+	service_deinit(svr, cfg);
 	free(service_cfgfile);
 	if(service_stop_event) (void)WSACloseEvent(service_stop_event);
 	verbose(VERB_QUERY, "winservice - full stop");
@@ -465,8 +363,8 @@ service_start(const char* cfgfile, int v, int c)
 	verbosity=v;
 	if(verbosity >= VERB_QUERY) {
 		/* log to file about start sequence */
-		fclose(fopen("C:\\unbound.log", "w"));
-		log_init("C:\\unbound.log", 0, 0);
+		fclose(fopen("C:\\dnssectrigger.log", "w"));
+		log_init("C:\\dnssectrigger.log", 0, 0);
 		verbose(VERB_QUERY, "open logfile");
 	} else log_init(0, 1, 0); /* otherwise, use Application log */
 	if(c) {
@@ -490,16 +388,48 @@ wsvc_command_option(const char* wopt, const char* cfgfile, int v, int c)
 	else if(strcmp(wopt, "service") == 0)
 		service_start(cfgfile, v, c);
 	else fatal_exit("unknown option: %s", wopt);
-	exit(0);
 }
 
 void
-worker_win_stop_cb(int ATTR_UNUSED(fd), short ATTR_UNUSED(ev), void* arg)
+worker_win_stop_cb(int ATTR_UNUSED(fd), short ATTR_UNUSED(ev),
+	void* ATTR_UNUSED(arg))
 {
-        struct worker* worker = (struct worker*)arg;
         verbose(VERB_QUERY, "caught stop signal (wsaevent)");
-        worker->need_to_exit = 1;
-        comm_base_exit(worker->base);
+        comm_base_exit(global_svr->base);
+}
+
+/** log a windows GetLastError message */
+void log_win_err(const char* str, DWORD err)
+{
+	LPTSTR buf;
+	if(FormatMessage(FORMAT_MESSAGE_FROM_SYSTEM |
+		FORMAT_MESSAGE_IGNORE_INSERTS | FORMAT_MESSAGE_ALLOCATE_BUFFER,
+		NULL, err, 0, (LPTSTR)&buf, 0, NULL) == 0) {
+		/* could not format error message */
+		log_err("%s, GetLastError=%d", str, (int)err);
+		return;
+	}
+	log_err("%s, (err=%d): %s", str, (int)err, buf);
+	LocalFree(buf);
+}
+
+typedef HANDLE ub_thread_t;
+void ub_thread_create(ub_thread_t* thr, void* (*func)(void*), void* arg)
+{
+#ifndef HAVE__BEGINTHREADEX
+	*thr = CreateThread(NULL, /* default security (no inherit handle) */
+		0, /* default stack size */
+		(LPTHREAD_START_ROUTINE)func, arg,
+		0, /* default flags, run immediately */
+		NULL); /* do not store thread identifier anywhere */
+#else
+	/* the begintheadex routine setups for the C lib; aligns stack */
+	*thr=(ub_thread_t)_beginthreadex(NULL, 0, (void*)func, arg, 0, NULL);
+#endif
+	if(*thr == NULL) {
+		log_win_err("CreateThread failed", GetLastError());
+		fatal_exit("thread create failed");
+	}
 }
 
 /** wait for cron process to finish */
@@ -527,10 +457,8 @@ waitforit(PROCESS_INFORMATION* pinfo)
 static void*
 win_do_cron(void* ATTR_UNUSED(arg))
 {
-	int mynum=65;
 	char* cronaction;
-	log_thread_set(&mynum);
- 	cronaction = lookup_reg_str("Software\\Unbound", "CronAction");
+ 	cronaction = lookup_reg_str("Software\\DnssecTrigger", "CronAction");
 	if(cronaction && strlen(cronaction)>0) {
 		STARTUPINFO sinfo;
 		PROCESS_INFORMATION pinfo;
@@ -564,7 +492,7 @@ set_cron_timer()
 		cron_was_quick = 1;
 		crontime = 3600; /* first update some time after boot */
 	} else {
-		crontime = lookup_reg_int("Software\\Unbound", "CronTime");
+		crontime = lookup_reg_int("Software\\DnssecTrigger", "CronTime");
 		if(crontime == 0) crontime = 60*60*24; /* 24 hours */
 	}
 	memset(&tv, 0, sizeof(tv));
@@ -575,38 +503,37 @@ set_cron_timer()
 void
 wsvc_cron_cb(void* arg)
 {
-	struct worker* worker = (struct worker*)arg;
 	/* perform cronned operation */
 	verbose(VERB_ALGO, "cron timer callback");
 	if(cron_thread == NULL) {
 		/* create new thread to do it */
-		ub_thread_create(&cron_thread, win_do_cron, worker);
+		ub_thread_create(&cron_thread, win_do_cron, arg);
 	}
 	/* reschedule */
 	set_cron_timer();
 }
 
-void wsvc_setup_worker(struct worker* worker)
+void wsvc_setup_worker(struct comm_base* base)
 {
 	/* if not started with -w service, do nothing */
 	if(!service_stop_event)
 		return;
-	if(!winsock_register_wsaevent(comm_base_internal(worker->base),
+	if(!winsock_register_wsaevent(comm_base_internal(base),
 		&service_stop_ev, service_stop_event,
-		&worker_win_stop_cb, worker)) {
+		&worker_win_stop_cb, NULL)) {
 		fatal_exit("could not register wsaevent");
 		return;
 	}
 	if(!service_cron) {
-		service_cron = comm_timer_create(worker->base, 
-			wsvc_cron_cb, worker);
+		service_cron = comm_timer_create(base, 
+			&wsvc_cron_cb, NULL);
 		if(!service_cron)
 			fatal_exit("could not create cron timer");
 		set_cron_timer();
 	}
 }
 
-void wsvc_desetup_worker(struct worker* ATTR_UNUSED(worker))
+void wsvc_desetup_worker(void)
 {
 	comm_timer_delete(service_cron);
 	service_cron = NULL;
